# FlightManagerTPLabNGTU

./: .env  .gitignore  apply-gradle.bat  docker-compose.yml  docker-less.env  run.bash  run.bat  ubuntu-run.bash
client/: CMakeLists.txt  client.bash  client.bat
client/src/: CMakeLists.txt  Config.h  main.cpp
client/src/cpp/models/: FlightModel.cpp
client/src/cpp/presenter/: AirportPresenter.cpp  DispatcherPresenter.cpp  FlightPresenter.cpp  IdentityPresenter.cpp  PlanePresenter.cpp  TimePresenter.cpp
client/src/cpp/repos/: AirportRepository.cpp  DispatcherRepository.cpp  FlightRepository.cpp  IdentityRepository.cpp  PlaneRepository.cpp  TimeRepository.cpp  TokenRepository.cpp
client/src/cpp/utils/: ClientLogger.cpp
client/src/header/models/: DispatcherModel.h
client/src/header/presentation/: AirportPresenter.h  DispatcherPresenter.h  FlightPresenter.h  IPresenter.h  IdentityPresenter.h  PlanePresenter.h  TimePresenter.h
client/src/header/repos/: AirportRepository.h  DispatcherRepository.h  FlightRepository.h  IdentityRepository.h  PlaneRepository.h  TimeRepository.h  TokenRepository.h
client/src/header/utils/: ClientLogger.h
client/src/include/: Config.h  srclib.h
client/src/include/presentation/: AirportPresenter.h  DispatcherPresenter.h  FlightPresenter.h  IdentityPresenter.h  PlanePresenter.h  TimePresenter.h
client/test/: CMakeLists.txt  test1.cpp  test1.py
database-service/: Dockerfile  build.gradle  service.bash  service.bat
database-service/src/main/java/com/flightmanager/databaseservice/api/: AirportController.java  DispatcherController.java  FlightController.java  PlaneController.java
database-service/src/main/java/com/flightmanager/databaseservice/config/: PropertiesConfig.java  SwaggerConfig.java
database-service/src/main/java/com/flightmanager/databaseservice/models/: AirportModel.java  DispatcherModel.java
database-service/src/main/java/com/flightmanager/databaseservice/repos/: AirportRepo.java  DispatcherRepo.java  FlightRepo.java  PlaneRepo.java
database-service/src/main/java/com/flightmanager/databaseservice/security/: SecurityConfig.java  ServiceAuthorizer.java  ServiceTokenFilter.java
database-service/src/main/resources/: application.properties
database-service/src/main/resources/db/migration/: V1_0.0.1__init.sql
docs/: API Documentation 8082 (auth).docx  API Documentation.docx  Client_diagramm.drawio  Отчет Курсовой (1).docx  Отчет Курсовой.docx  Презентация1.pptx
docs/services-docs/: Client documentation.docx  Plane-service Documentation.docx
gateway/: Dockerfile  build.gradle  service.bash  service.bat
gateway/src/main/java/com/ilyakrn/gateway/: GatewayApplication.java
gateway/src/main/java/com/ilyakrn/gateway/config/: PropertiesConfig.java  RoutesConfig.java
gateway/src/main/java/com/ilyakrn/gateway/routes/: PlaneServiceRoutes.java
gateway/src/main/resources/: application.properties
identity-service/: Dockerfile  build.gradle  service.bash  service.bat
identity-service/src/main/java/com/flightmanager/identityservice/api/: AuthController.java
identity-service/src/main/java/com/flightmanager/identityservice/config/: HttpHeaderInterceptor.java  PropertiesConfig.java  ServiceConfig.java  SwaggerConfig.java
identity-service/src/main/java/com/flightmanager/identityservice/jwt/: JwtUtil.java  UserAuth.java
identity-service/src/main/java/com/flightmanager/identityservice/models/: TokenRequest.java  TokenResponse.java  UserModel.java
identity-service/src/main/java/com/flightmanager/identityservice/properties/: PropertiesConfig.java
identity-service/src/main/java/com/flightmanager/identityservice/repo/: UserRepo.java
identity-service/src/main/java/com/flightmanager/identityservice/security/: SecurityConfig.java  ServiceAuthorizer.java  ServiceTokenFilter.java
identity-service/src/main/java/com/flightmanager/identityservice/service/: AuthService.java  JwtService.java  UserService.java
identity-service/src/main/resources/: application.properties
plane-service/: CMakeLists.txt  Dockerfile  main.cpp  service.bash  service.bat
plane-service/src/: Config.h  main.cpp
plane-service/src/cpp/controllers/: AirportController.cpp  DispatcherController.cpp  FlightController.cpp  IController.cpp  PlaneController.cpp  TimeController.cpp
plane-service/src/cpp/models/: AirportModel.cpp  DispatcherModel.cpp  FlightModel.cpp  PlaneModel.cpp  TimeModel.cpp
plane-service/src/cpp/repos/: AirportRepository.cpp  DispatcherRepository.cpp  FlightRepository.cpp  IdentityRepository.cpp  PlaneRepository.cpp  TimeRepository.cpp
plane-service/src/cpp/services/: AirportService.cpp  DispatcherService.cpp  FlightService.cpp  PlaneService.cpp  TimeService.cpp
plane-service/src/cpp/utils/: Logger.cpp
plane-service/src/header/: Config.h
plane-service/src/header/controllers/: AirportController.h  DispatcherController.h  FlightController.h  PlaneController.h
plane-service/src/header/models/: AirportModel.h  DispatcherModel.h  FlightModel.h  PlaneModel.h  TimeModel.h
plane-service/src/header/repos/: AirportRepository.h  DispatcherRepository.h  FlightRepository.h  PlaneRepository.h
plane-service/src/header/services/: AirportService.h  DispatcherService.h  FlightService.h  PlaneService.h  TimeService.h
plane-service/src/header/utils/: Logger.h
